# syncmiru

./: .gitignore  ATTRIBUTIONS  LICENSE  README.md  THIRD_PARTY_LICENSES  package.json  pnpm-lock.yaml
syncmiru-client/: index.html  license.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
syncmiru-client/public/locales/cs/: translation.json
syncmiru-client/public/locales/en/: translation.json
syncmiru-client/src/: i18n.ts  license-main.tsx  main.tsx  models.ts  rc-tooltip.css  react-menu.css  react-select.css  styles.css
syncmiru-client/src-tauri/: Cargo.toml  tauri.conf.json
syncmiru-client/src-tauri/capabilities/: default.json  dialog.json  theme.json
syncmiru-client/src-tauri/locales/: cs.json  en.json
syncmiru-client/src-tauri/resources/: prelude.lua
syncmiru-client/src-tauri/src/: appstate.rs  config.rs  constants.rs  deps.rs  error.rs  files.rs  frontend.rs  hash.rs  license.rs  login.rs  macro.rs  main.rs  mpv.rs  result.rs  socketio.rs  sys.rs  utils.rs  window.rs  x11.rs
syncmiru-client/src-tauri/src/config/: appdata.rs  deps.rs  frontend.rs  jwt.rs  utils.rs
syncmiru-client/src-tauri/src/config/appdata/: frontend.rs
syncmiru-client/src-tauri/src/login/: frontend.rs
syncmiru-client/src-tauri/src/mpv/: frontend.rs  ipc.rs  models.rs  prelude.lua  utils.rs  window.rs
syncmiru-client/src-tauri/src/mpv/ipc/: utils.rs  win32.rs
syncmiru-client/src-tauri/src/mpv/window/: win32.rs  x11.rs
syncmiru-client/src-tauri/src/socketio/: frontend.rs  handlers.rs
syncmiru-client/src-tauri/src/sys/: unix.rs  windows.rs
syncmiru-client/src/components/: App.tsx  BackButton.tsx  ButtonPanel.tsx  CurrentUser.tsx  Deps.tsx  DepsAgain.tsx  DepsMissingNoWindows.tsx  DepsMissingWindows.tsx  DownloadDepsWindows.tsx  DownloadProgressBar.tsx  JoinedRoom.tsx  LanguageSelector.tsx  Loading.tsx  Log.tsx  LoginDispatch.tsx  Main.tsx  Middle.tsx  Mpv.tsx  MpvDownloadAgainWindows.tsx  MpvDownloadFailed.tsx  MpvDownloadWindows.tsx  MpvDownloading.tsx  Playlist.tsx  Reconnecting.tsx  RoomCreate.tsx  Rooms.tsx  SampleSeparator.tsx  SrvInfo.tsx  TestComponent.tsx  Trampoline.tsx  UserSettings.tsx  Users.tsx  Welcome.tsx  YtDlpDownloadAgainWindows.tsx  YtDlpDownloadFailed.tsx  YtDlpDownloadWindows.tsx
syncmiru-client/src/components/hoc/: withSrvValidate.tsx
syncmiru-client/src/components/lic/: Acknowledgements.tsx  LicenseMain.tsx  Licenses.tsx  Syncmiru.tsx
syncmiru-client/src/components/login/: EmailVerified.tsx  EmailVerify.tsx  EmailVerifyDispatch.tsx  ForgottenPassword.tsx  ForgottenPasswordChanged.tsx  ForgottenPasswordDispatch.tsx  HomeServer.tsx  Login.tsx  LoginAuto.tsx  LoginDispatch.tsx  LoginForm.tsx  LoginFormMain.tsx  Register.tsx  RegisterCaptcha.tsx  RegisterDispatch.tsx  RegisterToken.tsx
syncmiru-client/src/components/mpv/: Mpv.tsx
syncmiru-client/src/components/panel/: AddFromFileSrv.tsx  AddToPlaylistBtn.tsx  AddUrlAddress.tsx  AddVideoFromFileSrv.tsx  AudioSyncBtn.tsx  ButtonPanel.tsx  FilePicker.tsx  MpvReloadBtn.tsx  MpvWindowBtn.tsx  ReadyBtn.tsx  SpeedLabel.tsx  SubSyncBtn.tsx  SyncToMasterBtn.tsx  UploadMyMpvState.tsx  UsersShowHideBtn.tsx
syncmiru-client/src/components/playlist/: AddSubtitlesFromFileSrv.tsx  Playlist.tsx
syncmiru-client/src/components/rooms/: DeleteRoom.tsx  DesyncTolerance.tsx  JoinedRoom.tsx  MajorDesyncMin.tsx  MinorDesyncPlaybackSlow.tsx  PlaybackSpeed.tsx  RoomCreate.tsx  RoomGeneralSettings.tsx  RoomNameSettings.tsx  RoomSettings.tsx  RoomSyncSettings.tsx  Rooms.tsx
syncmiru-client/src/components/srv/: DefaultRoom.tsx  DesyncTolerance.tsx  DesyncToleranceDefault.tsx  MajorDesyncAction.tsx  MajorDesyncActionDefault.tsx  MajorDesyncMin.tsx  RegTkns.tsx  (+15 more)
syncmiru-client/src/form/: validators.ts
syncmiru-client/src/hooks/: fieldSchema.ts  useAudioSync.ts  useCSSTheme.ts  useCanAutoLogin.ts  useClearJwt.ts  useDepsState.ts  useDepsVersions.ts  useEmailValidate.tsx  useEventListen.ts  useFirstRunSeen.ts  useForgottenPasswordChangePassword.ts  useFormValidate.ts  useHomeServer.ts  useHwidHash.ts  useIsSupportedWindowSystem.ts  useJwt.tsx  useLanguage.ts  useLogin.ts  useMainContext.ts  useMpvStartDownloading.ts  useMpvWinDetached.ts  useNewLogin.ts  useNewPasswordFormSchema.ts  usePasswordValidate.ts  useRegFormSchema.ts  useReqForgottenPasswordEmail.ts  useReqVerificationEmail.ts  useSendRegistration.ts  useServiceStatus.ts  useShownTheme.ts  useSubSync.ts  useTargetFamily.ts  useTauriGetCommand.ts  useTestCommand.ts  useTheme.ts  useUserContext.ts  useUsersShown.ts  useWatchVerify.tsx  useYtDlpStartDownloading.ts
syncmiru-client/src/models/: config.tsx  context.ts  deps.ts  depsDownload.ts  file.ts  historyState.ts  login.ts  mpv.ts  mpvDownloadHistoryState.ts  playlist.ts  room.ts  roomUser.ts  serviceStatus.ts  socketio.ts  srv.ts  user.ts
syncmiru-client/src/utils/: alert.ts  constants.ts  datatable-themes.ts  encoding.ts  mpv.ts  navigate.ts  playlist.ts  pretty.ts  regTkn.ts  room.ts  slider.ts  sort.ts
syncmiru-srv/: .dockerignore  .env  Caddyfile  Cargo.toml  Dockerfile-openresty  Dockerfile-syncmiru  config.yaml.example  docker-compose.yaml
syncmiru-srv/locales/: cs.json  en.json
syncmiru-srv/migrations/: 0_init.sql  1_data.sql
syncmiru-srv/openresty/: .htpasswd-openresty.localhost
syncmiru-srv/openresty/lua-scripts/: syncmiru-client.lua  syncmiru-server.lua
syncmiru-srv/openresty/sites/: default.conf
syncmiru-srv/scripts/: gen_keys.py  gen_srv_jwt.py  requirements.txt
syncmiru-srv/src/: args.rs  bimultimap.rs  config.rs  constants.rs  crypto.rs  db.rs  email.rs  error.rs  file.rs  handlers.rs  html.rs  log.rs  main.rs  middleware.rs  models.rs  query.rs  result.rs  srvstate.rs  tkn.rs  trait_ext.rs  validators.rs
syncmiru-srv/src/handlers/: http.rs  public.rs  socketio.rs  timers.rs  utils.rs  web.rs  ws.rs
syncmiru-srv/src/handlers/http/: utils.rs
syncmiru-srv/src/handlers/socketio/: utils.rs
syncmiru-srv/src/models/: file.rs  http.rs  mpv.rs  playlist.rs  query.rs  socketio.rs  web.rs  ws.rs
syncmiru-srv/src/query/: web.rs
(+103 files in other folders)
