[package]
name = "syncmiru-srv"
version = "0.1.0"
description = "Syncmiru server"
authors = ["Jakub Levý"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror = "1.0.58"
anyhow = "1.0.81"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate", "chrono", "rust_decimal" ] }
axum = { version = "0.7.5", features = ["macros"] }
tower = { version = "0.4.13", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
socketioxide = { version = "0.12.0", features = ["state", "extensions", "tracing"] }
log = "0.4.21"
sys-locale = "0.3.1"
yaml-rust2 = "0.8.0"
clap = { version = "4.5.4", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serde = "1.0.197"
serde_repr = "0.1.18"
serde_with = "3.7.0"
serde_json = "1.0.116"
validator = { version = "0.17.0", features = ["derive"] }
hcaptcha = "2.3.1"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.0"
lettre = "0.11.6"
rust-i18n = "3.0.1"
serde_urlencoded = "0.7.1"
pem = "3.0.4"
josekit = "0.8.6"
openssl = { version = "0.10.64", features = ["vendored"] }
bimap = "0.6.3"
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.25.1"
rust_decimal = { version = "1.34.2"}
rust_decimal_macros = "1.34.2"
reqwest = { version = "0.12.2", features = ["json"] }
urlencoding = "2.1.3"
indexmap = { version = "2.2.6", features = ["serde"] }
multimap = {version = "0.10.0", features = ["serde"]}
url = "2.5.2"