[package]
name = "syncmiru-srv"
version = "0.1.0"
description = "Syncmiru server"
authors = ["Jakub Levý"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror = "1.0.64"
anyhow = "1.0.89"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "migrate", "chrono", "rust_decimal"] }
axum = { version = "0.7.7", features = ["macros"] }
tower = { version = "0.5.1", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
socketioxide = { version = "0.14.1", features = ["state", "extensions", "tracing"] }
log = "0.4.22"
sys-locale = "0.3.1"
yaml-rust2 = "0.9.0"
clap = { version = "4.5.18", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
serde = "1.0.210"
serde_repr = "0.1.19"
serde_with = "3.9.0"
serde_json = "1.0.128"
validator = { version = "0.18.1", features = ["derive"] }
hcaptcha = "2.5.0"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.1"
lettre = "0.11.9"
rust-i18n = "3.1.2"
serde_urlencoded = "0.7.1"
pem = "3.0.4"
josekit = "0.10.0"
openssl = { version = "0.10.66", features = ["vendored"] }
bimap = "0.6.3"
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.25.2"
rust_decimal = { version = "1.36.0"}
rust_decimal_macros = "1.36.0"
reqwest = { version = "0.12.7", features = ["json"] }
urlencoding = "2.1.3"
indexmap = { version = "2.5.0", features = ["serde"] }
multimap = {version = "0.10.0", features = ["serde"]}
url = "2.5.2"