[package]
name = "syncmiru-srv"
version = "1.0.0"
description = "Syncmiru server"
authors = ["Jakub Levý"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.9"
anyhow = "1.0.95"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "migrate", "chrono", "rust_decimal"] }
axum = { version = "0.8.1", features = ["macros"] }
tower = { version = "0.5.2", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
socketioxide = { version = "0.15.1", features = ["state", "extensions", "tracing"] }
log = "0.4.22"
yaml-rust2 = "0.9.0"
clap = { version = "4.5.23", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
serde = "1.0.217"
serde_repr = "0.1.19"
serde_with = "3.12.0"
serde_json = "1.0.134"
validator = { version = "0.19.0", features = ["derive"] }
hcaptcha = "3.0.3"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.1"
lettre = "0.11.11"
rust-i18n = "3.1.2"
serde_urlencoded = "0.7.1"
pem = "3.0.4"
josekit = "0.10.1"
openssl = { version = "0.10.68", features = ["vendored"] }
bimap = "0.6.3"
chrono = { version = "0.4.39", features = ["serde"] }
image = "0.25.5"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
reqwest = { version = "0.12.12", features = ["json"] }
urlencoding = "2.1.3"
indexmap = { version = "2.7.0", features = ["serde"] }
url = "2.5.4"