[package]
name = "syncmiru-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta" }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.18"
keyring = "2.3.2"
rust-ini = "0.21.0"
dirs = "5.0.1"
sys-locale = "0.3.1"
thiserror = "1.0.58"
anyhow = "1.0.81"
tauri-plugin-theme = { git = "https://github.com/jakublevy/tauri-plugin-theme.git", branch = "main" }
rust-i18n = "3.0.1"
reqwest = { version = "0.12.2", features = ["json"] }
roxmltree = "0.19.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "process"] }
sevenz-rust = "0.5.4"
zip = "0.6.6"
octocrab = "0.37.0"
serial_test = "3.0.0"
serde_with = "3.7.0"
machineid-rs = "1.2.4"
whoami = "1.5.1"
tauri-plugin-single-instance = "2.0.0-beta.6"
sha2 = "0.10.8"
hex = "0.4.3"
cfg-if = "1.0.0"
interprocess = { version = "2.2.0", features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]}

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13.0", features = ["cursor"] }
gtk = "0.18.1"
gdk = "0.18.0"
