[package]
name = "syncmiru-client"
version = "0.1.0"
description = "Syncmiru client"
authors = ["Jakub Levý"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.25", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.18"
keyring = {version = "3.3.0", features = ["windows-native", "linux-native"] }
rust-ini = "0.21.1"
dirs = "5.0.1"
sys-locale = "0.3.1"
thiserror = "1.0.64"
anyhow = "1.0.89"
tauri-plugin-theme = { git = "https://github.com/jakublevy/tauri-plugin-theme.git", branch = "main" }
rust-i18n = "3.1.2"
reqwest = { version = "0.12.7", features = ["json"] }
roxmltree = "0.20.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "process"] }
sevenz-rust = "0.6.1"
zip = "2.2.0"
octocrab = "0.40.0"
serial_test = "3.1.1"
serde_with = "3.9.0"
machineid-rs = "1.2.4"
whoami = "1.5.2"
tauri-plugin-single-instance = "2.0.0-beta.11"
sha2 = "0.10.8"
hex = "0.4.3"
cfg-if = "1.0.0"
interprocess = { version = "2.2.1", features = ["tokio"] }
tauri-plugin-dialog = "2.0.0-beta.12"
rust_decimal = { version = "1.36.0" }
rust_decimal_macros = "1.36.0"
once_cell = "1.20.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13.1", features = ["cursor"] }
gtk = "0.18.1"
gdk = "0.18.0"
