[package]
name = "syncmiru-client"
version = "1.0.0"
description = "Syncmiru client"
authors = ["Jakub Levý"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_repr = "0.1.19"
keyring = { version = "3.6.1", features = ["windows-native", "linux-native"] }
rust-ini = "0.21.1"
dirs = "5.0.1"
sys-locale = "0.3.2"
thiserror = "2.0.9"
anyhow = "1.0.95"
tauri-plugin-theme = "2.1.2"
rust-i18n = "3.1.2"
reqwest = { version = "0.12.12", features = ["json"] }
roxmltree = "0.20.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "process"] }
sevenz-rust = "0.6.1"
zip = "2.2.2"
octocrab = "0.42.1"
serial_test = "3.2.0"
machineid-rs = "1.2.4"
whoami = "1.5.2"
tauri-plugin-single-instance = "2.2.0"
sha2 = "0.10.8"
hex = "0.4.3"
cfg-if = "1.0.0"
interprocess = { version = "2.2.2", features = ["tokio"] }
tauri-plugin-dialog = "2.2.0"
rust_decimal = { version = "1.36.0" }
once_cell = "1.20.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.58.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.13.1", features = ["cursor", "resource_manager"] }
gtk = "0.18.2"
gdk = "0.18.2"
